--- a/contact/contact-ar.html
+++ b/contact/contact-ar.html
@@ -53,14 +53,14 @@
                         <i class="fa-solid fa-phone-volume fs-3 me-2 text-danger"></i>
                         <div class="navbar__box__text text-color fontf__oswald fw-bolder">
                             <p>تواصل معنا</p>
-                            <a class="fs-6" href="tel:+01022674132">01022674132</a>
+                            <a class="fs-6" href="tel:0504333360">0504333360</a>
                         </div>
                     </div>
                     <div class="navbar__box">
                         <i class="fa-solid fa-envelope-open-text fs-3 me-2 text-danger"></i>
                         <div class="navbar__box__text text-color fontf__oswald fw-bolder">
                             <p>الأيميل</p>
-                            <a class="fs-6" href="mailto:abdelrazekemad123@gmail.com">abdelrazekemad123@gmail.com</a>
+                            <a class="fs-6" href="mailto:masar@masaratalmina.com">masar@masaratalmina.com</a>
                         </div>
                     </div>
                     <div class="navbar__box">
@@ -130,11 +130,11 @@
         <div class="mobile-nav__info">
             <span>
                 <i class="fa-solid fa-phone-volume fs-3 me-2 text-danger"></i>
-                <a href="tel:01022674132">01022674132</a>
+                <a href="tel:0504333360">0504333360</a>
             </span>
             <span>
                 <i class="fa-solid fa-envelope-open-text fs-3 me-2 text-danger"></i>
-                <a href="mailto:abdelrazekemad123@gmail.com">abdelrazekemad123@gmail.com</a>
+                <a href="mailto:masar@masaratalmina.com">masar@masaratalmina.com</a>
             </span>
             <span>
                 <i class="fa-solid fa-location-dot fs-3 me-2 text-danger"></i>
@@ -165,15 +165,14 @@
                             <i class="fa-solid fa-phone-volume fs-1 me-2 text-danger"></i>
                             <div class="navbar__box__text text-color fontf__oswald fw-bolder">
                                 <p>تواصل معنا</p>
-                                <a class="fs-6" href="tel:+01022674132">01022674132</a>
+                                <a class="fs-6" href="tel:0504333360">0504333360</a>
                             </div>
                         </div>
                         <div class="navbar__box mb-4">
                             <i class="fa-solid fa-envelope-open-text fs-1 me-2 text-danger"></i>
                             <div class="navbar__box__text text-color fontf__oswald fw-bolder">
                                 <p>الأيميل</p>
-                                <a class="fs-6"
-                                    href="mailto:abdelrazekemad123@gmail.com">abdelrazekemad123@gmail.com</a>
+                                <a class="fs-6" href="mailto:masar@masaratalmina.com">masar@masaratalmina.com</a>
                             </div>
                         </div>
                         <div class="navbar__box mb-4">
@@ -254,10 +253,10 @@
                 <div class="col">
                     <h2>روابط هامة:</h2>
                     <ul>
-                        <li><a class="text-color" href="./index.html">الصفحة الرئيسية</a></li>
-                        <li><a class="text-color" href="./index.html">عن الشركة</a></li>
-                        <li><a class="text-color" href="./index.html">تواصل معنا</a></li>
-                        <li><a class="text-color" href="./index.html">خدماتنا</a></li>
+                        <li><a class="text-color" href="../index-ar.html">الصفحة الرئيسية</a></li>
+                        <li><a class="text-color" href="../about-us/about-ar.html">عن الشركة</a></li>
+                        <li><a class="text-color" href="./contact-ar.html">تواصل معنا</a></li>
+                        <li><a class="text-color" href="../services/services-ar.html">خدماتنا</a></li>
                     </ul>
                 </div>
                 <div class="col-6">
@@ -269,7 +268,7 @@
                                 -الشارع :طريق صلاح الدين الايوبي</p>
                         </li>
                         <li>الايميل:
-                            <p class="text-color">abdelrazekemad123@gmail.com</p>
+                            <p class="text-color">masar@masaratalmina.com</p>
                         </li>
                     </ul>
                 </div>
