--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
                         <i class="fa-solid fa-phone-volume fs-3 me-2 text-danger"></i>
                         <div class="navbar__box__text text-color fontf__oswald fw-bolder">
                             <p class="text-color">Call us now</p>
-                            <a class="fs-6" href="tel:+01022674132">01022674132</a>
+                            <a class="fs-6" href="tel:0504333360">0504333360</a>
                         </div>
                     </div>
                     <div class="navbar__box">
                         <i class="fa-solid fa-envelope-open-text fs-3 me-2 text-danger"></i>
                         <div class="navbar__box__text text-color fontf__oswald fw-bolder">
                             <p>Email now</p>
-                            <a class="fs-6" href="mailto:abdelrazekemad123@gmail.com">abdelrazekemad123@gmail.com</a>
+                            <a class="fs-6" href="mailto:masar@masaratalmina.com">masar@masaratalmina.com</a>
                         </div>
                     </div>
                     <div class="navbar__box">
@@ -140,11 +140,11 @@
         <div class="mobile-nav__info">
             <span>
                 <i class="fa-solid fa-phone-volume fs-3 me-2 text-danger"></i>
-                <a href="tel:01022674132">01022674132</a>
+                <a href="tel:0504333360">0504333360</a>
             </span>
             <span>
                 <i class="fa-solid fa-envelope-open-text fs-3 me-2 text-danger"></i>
-                <a href="mailto:abdelrazekemad123@gmail.com">abdelrazekemad123@gmail.com</a>
+                <a href="mailto:masar@masaratalmina.com">masar@masaratalmina.com</a>
             </span>
             <span>
                 <i class="fa-solid fa-location-dot fs-3 me-2 text-danger"></i>
@@ -159,12 +159,14 @@
             <div class="item slider-1 ">
                 <div class="container">
                     <div class="hero__content">
+                        <img width="250" class="img-fluid" src="./content/assets/img/logo/logo-w-en.webp" alt="">
                         <span class="fontf__oswald fs-4">We work with expertise and professionalism.</span>
                         <h1>Masarat Al Mina is<br> your first choice</h1>
                         <div>
                             <button class="main__btn fontf__oswald bg_red_color"><a class="text_main_color"
-                                    href="#">Contact Us</a></button>
-                            <button class="fontf__oswald bordered__btn"><a href="#">Our Services</a></button>
+                                    href="./contact/contact.html">Contact Us</a></button>
+                            <button class="fontf__oswald bordered__btn"><a href="./services/services.html">Our
+                                    Services</a></button>
                         </div>
                     </div>
                 </div>
@@ -172,11 +174,14 @@
             <div class="item slider-2 ">
                 <div class="container">
                     <div class="hero__content">
+                        <img width="250px" class="img-fluid" src="./content/assets/img/logo/logo-w-en.webp" alt="">
                         <span class="fontf__oswald fs-4">We work with expertise and professionalism.</span>
                         <h2>Masarat Al Mina is<br> your first choice</h2>
                         <div>
-                            <button class="main__btn fontf__oswald bg_red_color"><a href="#">Contact Us</a></button>
-                            <button class="fontf__oswald bordered__btn"><a href="#">Our Services</a></button>
+                            <button class="main__btn fontf__oswald bg_red_color"><a
+                                    href="./contact/contact.html">Contact Us</a></button>
+                            <button class="fontf__oswald bordered__btn"><a href="./services/services.html">Our
+                                    Services</a></button>
                         </div>
                     </div>
                 </div>
@@ -184,11 +189,14 @@
             <div class="item slider-3 ">
                 <div class="container">
                     <div class="hero__content">
+                        <img width="250px" class="img-fluid" src="./content/assets/img/logo/logo-w-en.webp" alt="">
                         <span class="fontf__oswald fs-4">We work with expertise and professionalism.</span>
                         <h2>Masarat Al Mina is<br> your first choice</h2>
                         <div>
-                            <button class="main__btn fontf__oswald bg_red_color"><a href="#">Contact Us</a></button>
-                            <button class="fontf__oswald bordered__btn"><a href="#">Our Services</a></button>
+                            <button class="main__btn fontf__oswald bg_red_color"><a
+                                    href="./contact/contact.html">Contact Us</a></button>
+                            <button class="fontf__oswald bordered__btn"><a href="./services/services.html">Our
+                                    Services</a></button>
                         </div>
                     </div>
                 </div>
@@ -489,9 +497,9 @@
                     <h2>Links:</h2>
                     <ul>
                         <li><a class="text-color" href="./index.html">Home</a></li>
-                        <li><a class="text-color" href="./index.html">About us</a></li>
-                        <li><a class="text-color" href="./index.html">Contact us</a></li>
-                        <li><a class="text-color" href="./index.html">Services</a></li>
+                        <li><a class="text-color" href="./about-us/about.html">About us</a></li>
+                        <li><a class="text-color" href="./contact/contact.html">Contact us</a></li>
+                        <li><a class="text-color" href="./services/services.html">Services</a></li>
                     </ul>
                 </div>
                 <div class="col-6">
@@ -505,7 +513,7 @@
                                 Street: Salah Al-Din Al-Ayyubi Road</p>
                         </li>
                         <li>Email:
-                            <p class="text-color">abdelrazekemad123@gmail.com</p>
+                            <p class="text-color">masar@masaratalmina.com</p>
                         </li>
                     </ul>
                 </div>
