--- a/services/services-ar.html
+++ b/services/services-ar.html
@@ -25,7 +25,7 @@
             <span class="upperbar__text fontf__oswald text-uppercase ms-2">نحن أكثر من مجرد وسيلة نقل<span
                     class="text-white fw-bold"> استشارة
                     مجانية </span></span>
-            <ul class="upperbar__icons m-0 p-0 pe-3 d-flex">
+            <ul class="upperbar__icons pe-3 d-flex">
                 <li class="bg_red_color d-block p-2 text-white"><a class="text-white"
                         href="https://www.facebook.com/profile.php?id=100090033521652&is_tour_dismissed=true"
                         target="_blank"><i class="fa-brands fa-facebook"></i></a>
@@ -53,14 +53,14 @@
                         <i class="fa-solid fa-phone-volume fs-3 me-2 text-danger"></i>
                         <div class="navbar__box__text text-color fontf__oswald fw-bolder">
                             <p>تواصل معنا</p>
-                            <a class="fs-6" href="tel:+01022674132">01022674132</a>
+                            <a class="fs-6" href="tel:0504333360">0504333360</a>
                         </div>
                     </div>
                     <div class="navbar__box">
                         <i class="fa-solid fa-envelope-open-text fs-3 me-2 text-danger"></i>
                         <div class="navbar__box__text text-color fontf__oswald fw-bolder">
                             <p>الأيميل</p>
-                            <a class="fs-6" href="mailto:abdelrazekemad123@gmail.com">abdelrazekemad123@gmail.com</a>
+                            <a class="fs-6" href="mailto:masar@masaratalmina.com">masar@masaratalmina.com</a>
                         </div>
                     </div>
                     <div class="navbar__box">
@@ -83,7 +83,7 @@
 
     <!-- Start Navs -->
     <nav class="desktop-nav bg_red_color d-none d-lg-flex justify-content-between">
-        <ul class="navslist m-0 p-0">
+        <ul class="navslist">
             <li><a class="text-white" href="../index-ar.html">الصفحة الرئيسية</a></li>
             <li><a class="text-white" href="./services-ar.html">خدماتنا</a></li>
             <li class="desktop__dropdown">
@@ -104,7 +104,7 @@
     <div class="mobile-nav__overlay"></div>
     <nav class="mobile-nav">
         <span class="closing_btn"><i class="fa-solid fa-x text-white rounded-circle"></i></span>
-        <ul class="mobile-nav__list m-0 p-0 py-2">
+        <ul class="mobile-nav__list py-2">
             <a href="../index-ar.html">الصفحة الرئيسية</a>
             <a href="./services-ar.html">خدماتنا</a>
             <li class="mobile__dropdown fontf__oswald">
@@ -131,11 +131,11 @@
         <div class="mobile-nav__info">
             <span>
                 <i class="fa-solid fa-phone-volume fs-3 me-2 text-danger"></i>
-                <a href="tel:01022674132">01022674132</a>
+                <a href="tel:0504333360">0504333360</a>
             </span>
             <span>
                 <i class="fa-solid fa-envelope-open-text fs-3 me-2 text-danger"></i>
-                <a href="mailto:abdelrazekemad123@gmail.com">abdelrazekemad123@gmail.com</a>
+                <a href="mailto:masar@masaratalmina.com">masar@masaratalmina.com</a>
             </span>
             <span>
                 <i class="fa-solid fa-location-dot fs-3 me-2 text-danger"></i>
@@ -160,91 +160,89 @@
     <Section class="services py-5">
         <div class="container">
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
-                <div class="col">
+                <div class="col mb-3">
                     <div class="services__card">
                         <div class="services__number fontf__oswald fs-4 fw-bold">01</div>
-                        <div class="card__content">
-                            <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/boat.webp"
+                        <div class="card__content mb">
+                            <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/plane.webp"
                                     alt="">
                             </div>
                             <h5 class="text_main_color">خدمات الشحن الجوي</h3>
-                                <p class="text-color">نقدم خدمات التخليص الجمركي لأكثر من مطار في مفترق المملكة العربية
-                                    السعودية.</p>
+                                <p class="text-color">خدمات الشحن الجوي أحد أهم الخدمات التي تقدمها مسارات الميناء
+                                    للتخليص الجمركي فالشحن الجوي هو عملية ميسرة للأعمال التجارية بصورة كبيرة. وهي الخدمة
+                                    التي يتم فيها استخدام الطائرات في نقل الاغراض والبضائع من مكان الى مكان اخر على
+                                    مسافات طويلة جدا تمتد الى الكثير من الدول.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col mb-3">
                     <div class="services__card">
                         <div class="services__number fontf__oswald fs-4 fw-bold">02</div>
-                        <div class="card__content">
-                            <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/boat.webp"
-                                    alt="">
+                        <div class="card__content mb">
+                            <div class="mb-4"><img width="70"
+                                    src="../content/assets/img/outlets-section/frontal-truck.webp" alt="">
                             </div>
                             <h5 class="text_main_color">خدمات الشحن البري</h3>
                                 <p class="text-color">نقدم خدمات الشحن البري والمساعدة في نقل بضائع العملاء فنحن نمتلك
                                     واحداً من أكبر أساطيل النقل البري متعدد الاغراض علي مستوي الشرق الاوسط ، كما نعمل
                                     دائما على تطوير شاحناتنا بصورة مستمرة وذلك لمجاراة تطور اعمال العملاء وللاستجابة
-                                    السريعة لمتطلباتهم والتتخليص الجمركي الخاص بها بسهولة.</p>
+                                    السريعة لمتطلباتهم والتخليص الجمركي.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col mb-3">
                     <div class="services__card">
                         <div class="services__number fontf__oswald fs-4 fw-bold">03</div>
-                        <div class="card__content">
+                        <div class="card__content mb">
                             <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/boat.webp"
                                     alt="">
                             </div>
                             <h5 class="text_main_color">خدمات الشحن البحري</h3>
-                                <p class="text-color">نعمل على تكوين شبكة شاملة متعددة الخدمات تغطي أكبر عدد من موانئ
-                                    البحر الأحمر والخليج العربي ، قائمة على تيسير كافة الأعمال المتخصصة بالتخليص الجمركي
-                                    والدعم اللوجيستي البحري من اعداد واستخراج مستندات وتصاريح الشحنات بالاضافة الي
-                                    استلام البضائع وتفريغها وتعبئتها ومناولتها وتحميلها ونقلها.</p>
+                                <p class="text-color">نقوم بتيسير كافة الأعمال المتخصصة بالتخليص الجمركي والدعم
+                                    اللوجيستي البحري من اعداد واستخراج مستندات وتصاريح الشحنات بالاضافة الي استلام
+                                    البضائع وتفريغها وتعبئتها ومناولتها وتحميلها ونقلها.</p>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 mt-lg-2">
-                <div class="col">
+                <div class="col mb-3">
                     <div class="services__card">
                         <div class="services__number fontf__oswald fs-4 fw-bold">04</div>
-                        <div class="card__content">
-                            <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/boat.webp"
+                        <div class="card__content mb">
+                            <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/boxes.webp"
                                     alt="">
                             </div>
                             <h5 class="text_main_color">خدمات التخزين</h3>
-                                <p class="text-color">نمتلك قاعدة كبيرة من المخازن والمستودعات المنتشرة حول موانئ
-                                    ومطارات المملكة العربية السعودية ، وذلك لسرعة الاستجابة لخدمات التخزين حفاظاً على
-                                    طبيعة وجودة الأغراض المخزنة ، وعدم تعرضها للعطب او التلف .</p>
+                                <p class="text-color"> نمتلك قاعدة كبيرة من المخازن والمستودعات المنتشرة حول موانئ
+                                    ومطارات المملكة العربية السعودية وذلك لسرعة الاستجابة لخدمات التخزين حفاظاً على
+                                    طبيعة وجودة الأغراض المخزنة ، وعدم تعرضها للعطب او التلف.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col mb-3">
                     <div class="services__card">
                         <div class="services__number fontf__oswald fs-4 fw-bold">05</div>
-                        <div class="card__content">
-                            <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/boat.webp"
+                        <div class="card__content mb">
+                            <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/export.webp"
                                     alt="">
                             </div>
                             <h5 class="text_main_color">الخدمات المعاونة لعمليات الإستيراد والتصدير</h3>
-                                <p class="text-color">نعتمد بشكل كبير على خبرتنا في تقديم المساعدات وتخليص المستندات
-                                    والتصاريح في أعمال التبادل التجاري الدولي مثل خدمات الاستيراد والتصدير ، كما نعتمد
-                                    على علاقاتنا داخل وخارج البلد بالإضافة إلى العلاقات الخاصة مع مسئولي الجمارك.</p>
+                                <p class="text-color">تقديم المساعدات وتخليص المستندات والتصاريح في أعمال التبادل
+                                    التجاري الدولي ، كما نعتمد على علاقاتنا داخل وخارج البلد بالإضافة إلى العلاقات
+                                    الخاصة مع مسئولي الجمارك.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col mb-3">
                     <div class="services__card">
                         <div class="services__number fontf__oswald fs-4 fw-bold">06</div>
-                        <div class="card__content">
-                            <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/boat.webp"
-                                    alt="">
+                        <div class="card__content mb">
+                            <div class="mb-4"><img width="70"
+                                    src="../content/assets/img/outlets-section/global-shipping.webp" alt="">
                             </div>
                             <h5 class="text_main_color">الخدمات اللوجيستيه</h3>
-                                <p class="text-color">الخدمات اللوجستية تعتبر أهم الخدمات التي تعتمد عليها الشركات
-                                    التجارية في تيسير أعمالها، وتعرف الخدمات اللوجيستية بأنها فن تنسيق وإدارة عملية تدفق
-                                    الموارد بداية من تحديد أماكنها وكيفية الحصول عليها مروراً بخطوات تخزينها و تخليصها
-                                    جمركياً حتي نقلها وتوصيلها إلى وجهتها الأخيرة.</p>
+                                <p class="text-color">وتعرف الخدمات اللوجيستية بأنها فن تنسيق وإدارة عملية تدفق الموارد
+                                    بداية من تحديد أماكنها وكيفية الحصول عليها مروراً بخطوات تخزينها و تخليصها جمركياً
+                                    حتي نقلها وتوصيلها إلى وجهتها الأخيرة.</p>
                         </div>
                     </div>
                 </div>
@@ -308,10 +306,10 @@
                 <div class="col">
                     <h2>روابط هامة:</h2>
                     <ul>
-                        <li><a class="text-color" href="./index.html">الصفحة الرئيسية</a></li>
-                        <li><a class="text-color" href="./index.html">عن الشركة</a></li>
-                        <li><a class="text-color" href="./index.html">تواصل معنا</a></li>
-                        <li><a class="text-color" href="./index.html">خدماتنا</a></li>
+                        <li><a class="text-color" href="../index-ar.html">الصفحة الرئيسية</a></li>
+                        <li><a class="text-color" href="../about-us/about-ar.html">عن الشركة</a></li>
+                        <li><a class="text-color" href="../contact/contact-ar.html">تواصل معنا</a></li>
+                        <li><a class="text-color" href="./services-ar.html">خدماتنا</a></li>
                     </ul>
                 </div>
                 <div class="col-6">
@@ -323,7 +321,7 @@
                                 -الشارع :طريق صلاح الدين الايوبي</p>
                         </li>
                         <li>الايميل:
-                            <p class="text-color">abdelrazekemad123@gmail.com</p>
+                            <p class="text-color">masar@masaratalmina.com</p>
                         </li>
                     </ul>
                 </div>
