--- a/services/services.html
+++ b/services/services.html
@@ -53,14 +53,14 @@
                         <i class="fa-solid fa-phone-volume fs-3 me-2 text-danger"></i>
                         <div class="navbar__box__text text-color fontf__oswald fw-bolder">
                             <p class="text-color">Call us now</p>
-                            <a class="fs-6" href="tel:+01022674132">01022674132</a>
+                            <a class="fs-6" href="tel:0504333360">0504333360</a>
                         </div>
                     </div>
                     <div class="navbar__box">
                         <i class="fa-solid fa-envelope-open-text fs-3 me-2 text-danger"></i>
                         <div class="navbar__box__text text-color fontf__oswald fw-bolder">
                             <p>Email now</p>
-                            <a class="fs-6" href="mailto:abdelrazekemad123@gmail.com">abdelrazekemad123@gmail.com</a>
+                            <a class="fs-6" href="mailto:masar@masaratalmina.com">masar@masaratalmina.com</a>
                         </div>
                     </div>
                     <div class="navbar__box">
@@ -133,11 +133,11 @@
         <div class="mobile-nav__info">
             <span>
                 <i class="fa-solid fa-phone-volume fs-3 me-2 text-danger"></i>
-                <a href="tel:01022674132">01022674132</a>
+                <a href="tel:0504333360">0504333360</a>
             </span>
             <span>
                 <i class="fa-solid fa-envelope-open-text fs-3 me-2 text-danger"></i>
-                <a href="mailto:abdelrazekemad123@gmail.com">abdelrazekemad123@gmail.com</a>
+                <a href="mailto:masar@masaratalmina.com">masar@masaratalmina.com</a>
             </span>
             <span>
                 <i class="fa-solid fa-location-dot fs-3 me-2 text-danger"></i>
@@ -164,7 +164,7 @@
                     <div class="services__card">
                         <div class="services__number fontf__oswald fs-4 fw-bold">01</div>
                         <div class="card__content">
-                            <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/boat.webp"
+                            <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/plane.webp"
                                     alt="">
                             </div>
                             <h5 class="text_main_color">Air cargo services</h3>
@@ -177,8 +177,8 @@
                     <div class="services__card">
                         <div class="services__number fontf__oswald fs-4 fw-bold">02</div>
                         <div class="card__content">
-                            <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/boat.webp"
-                                    alt="">
+                            <div class="mb-4"><img width="70"
+                                    src="../content/assets/img/outlets-section/frontal-truck.webp" alt="">
                             </div>
                             <h5 class="text_main_color">Ground Freight Services</h3>
                                 <p class="text-color">We provide ground freight services and help transport customer
@@ -205,7 +205,7 @@
                     <div class="services__card">
                         <div class="services__number fontf__oswald fs-4 fw-bold">04</div>
                         <div class="card__content">
-                            <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/boat.webp"
+                            <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/boxes.webp"
                                     alt="">
                             </div>
                             <h5 class="text_main_color">Storage Services</h3>
@@ -218,7 +218,7 @@
                     <div class="services__card">
                         <div class="services__number fontf__oswald fs-4 fw-bold">05</div>
                         <div class="card__content">
-                            <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/boat.webp"
+                            <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/export.webp"
                                     alt="">
                             </div>
                             <h5 class="text_main_color">Import and Export Auxiliary Services</h3>
@@ -232,8 +232,8 @@
                     <div class="services__card">
                         <div class="services__number fontf__oswald fs-4 fw-bold">06</div>
                         <div class="card__content">
-                            <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/boat.webp"
-                                    alt="">
+                            <div class="mb-4"><img width="70"
+                                    src="../content/assets/img/outlets-section/global-shipping.webp" alt="">
                             </div>
                             <h5 class="text_main_color">Logistics</h3>
                                 <p class="text-color">Logistics services are the most important services that commercial
@@ -302,10 +302,10 @@
                 <div class="col">
                     <h2>Links:</h2>
                     <ul>
-                        <li><a class="text-color" href="./index.html">Home</a></li>
-                        <li><a class="text-color" href="./index.html">About us</a></li>
-                        <li><a class="text-color" href="./index.html">Contact us</a></li>
-                        <li><a class="text-color" href="./index.html">Services</a></li>
+                        <li><a class="text-color" href="../index.html">Home</a></li>
+                        <li><a class="text-color" href="../about-us/about.html">About us</a></li>
+                        <li><a class="text-color" href="../contact/contact.html">Contact us</a></li>
+                        <li><a class="text-color" href="./services.html">Services</a></li>
                     </ul>
                 </div>
                 <div class="col-6">
@@ -319,7 +319,7 @@
                                 Street: Salah Al-Din Al-Ayyubi Road</p>
                         </li>
                         <li>Email:
-                            <p class="text-color">abdelrazekemad123@gmail.com</p>
+                            <p class="text-color">masar@masaratalmina.com</p>
                         </li>
                     </ul>
                 </div>
