--- a/index-ar.html
+++ b/index-ar.html
@@ -61,14 +61,14 @@
                         <i class="fa-solid fa-phone-volume fs-3 me-2 text-danger"></i>
                         <div class="navbar__box__text text-color fontf__oswald fw-bolder">
                             <p>تواصل معنا</p>
-                            <a class="fs-6" href="tel:+01022674132">01022674132</a>
+                            <a class="fs-6" href="tel:0504333360">0504333360</a>
                         </div>
                     </div>
                     <div class="navbar__box">
                         <i class="fa-solid fa-envelope-open-text fs-3 me-2 text-danger"></i>
                         <div class="navbar__box__text text-color fontf__oswald fw-bolder">
                             <p>الأيميل</p>
-                            <a class="fs-6" href="mailto:abdelrazekemad123@gmail.com">abdelrazekemad123@gmail.com</a>
+                            <a class="fs-6" href="mailto:masar@masaratalmina.com">masar@masaratalmina.com</a>
                         </div>
                     </div>
                     <div class="navbar__box">
@@ -139,11 +139,11 @@
         <div class="mobile-nav__info">
             <span>
                 <i class="fa-solid fa-phone-volume fs-3 me-2 text-danger"></i>
-                <a href="tel:01022674132">01022674132</a>
+                <a href="tel:0504333360">0504333360</a>
             </span>
             <span>
                 <i class="fa-solid fa-envelope-open-text fs-3 me-2 text-danger"></i>
-                <a href="mailto:abdelrazekemad123@gmail.com">abdelrazekemad123@gmail.com</a>
+                <a href="mailto:masar@masaratalmina.com">masar@masaratalmina.com</a>
             </span>
             <span>
                 <i class="fa-solid fa-location-dot fs-3 me-2 text-danger"></i>
@@ -158,11 +158,14 @@
             <div class="item slider-1 ">
                 <div class="container">
                     <div class="hero__content">
+                        <img width="250" class="img-fluid" src="./content/assets/img/logo/logo-w-ar.webp" alt="">
                         <span class="fontf__oswald fs-4">نعمل بخبرة ومهنية</span>
                         <h1>اختيارك الاول للتخليص الجمركي في اسرع وقت وأقل تكلفة</h1>
                         <div>
-                            <button class="main__btn fontf__oswald bg_red_color"><a href="#">تواصل معنا</a></button>
-                            <button class="fontf__oswald bordered__btn"><a href="#">خدماتنا</a></button>
+                            <button class="main__btn fontf__oswald bg_red_color"><a
+                                    href="./contact/contact-ar.html">تواصل معنا</a></button>
+                            <button class="fontf__oswald bordered__btn"><a
+                                    href="./services/services-ar.html">خدماتنا</a></button>
                         </div>
                     </div>
                 </div>
@@ -170,11 +173,14 @@
             <div class="item slider-2 ">
                 <div class="container">
                     <div class="hero__content">
+                        <img width="250" class="img-fluid" src="./content/assets/img/logo/logo-w-ar.webp" alt="">
                         <span class="fontf__oswald fs-4">نعمل بخبرة ومهنية</span>
                         <h1>اختيارك الاول للتخليص الجمركي في اسرع وقت وأقل تكلفة</h1>
                         <div>
-                            <button class="main__btn fontf__oswald bg_red_color"><a href="#">تواصل معنا</a></button>
-                            <button class="fontf__oswald bordered__btn"><a href="#">خدماتنا</a></button>
+                            <button class="main__btn fontf__oswald bg_red_color"><a
+                                    href="./contact/contact-ar.html">تواصل معنا</a></button>
+                            <button class="fontf__oswald bordered__btn"><a
+                                    href="./services/services-ar.html">خدماتنا</a></button>
                         </div>
                     </div>
                 </div>
@@ -182,11 +188,14 @@
             <div class="item slider-3 ">
                 <div class="container">
                     <div class="hero__content">
+                        <img width="250" class="img-fluid" src="./content/assets/img/logo/logo-w-ar.webp" alt="">
                         <span class="fontf__oswald fs-4">نعمل بخبرة ومهنية</span>
                         <h1>اختيارك الاول للتخليص الجمركي في اسرع وقت وأقل تكلفة</h1>
                         <div>
-                            <button class="main__btn fontf__oswald bg_red_color"><a href="#">تواصل معنا</a></button>
-                            <button class="fontf__oswald bordered__btn"><a href="#">خدماتنا</a></button>
+                            <button class="main__btn fontf__oswald bg_red_color"><a
+                                    href="./contact/contact-ar.html">تواصل معنا</a></button>
+                            <button class="fontf__oswald bordered__btn"><a
+                                    href="./services/services-ar.html">خدماتنا</a></button>
                         </div>
                     </div>
                 </div>
@@ -480,9 +489,9 @@
                     <h2>روابط هامة:</h2>
                     <ul>
                         <li><a class="text-color" href="./index.html">الصفحة الرئيسية</a></li>
-                        <li><a class="text-color" href="./index.html">عن الشركة</a></li>
-                        <li><a class="text-color" href="./index.html">تواصل معنا</a></li>
-                        <li><a class="text-color" href="./index.html">خدماتنا</a></li>
+                        <li><a class="text-color" href="./about-us/about-ar.html">عن الشركة</a></li>
+                        <li><a class="text-color" href="./contact/contact-ar.html">تواصل معنا</a></li>
+                        <li><a class="text-color" href="./services/services-ar.html">خدماتنا</a></li>
                     </ul>
                 </div>
                 <div class="col-6">
@@ -494,7 +503,7 @@
                                 -الشارع :طريق صلاح الدين الايوبي</p>
                         </li>
                         <li>الايميل:
-                            <p class="text-color">abdelrazekemad123@gmail.com</p>
+                            <p class="text-color">masar@masaratalmina.com</p>
                         </li>
                     </ul>
                 </div>
