--- a/outlets/land/land.html
+++ b/outlets/land/land.html
@@ -53,14 +53,14 @@
                         <i class="fa-solid fa-phone-volume fs-3 me-2 text-danger"></i>
                         <div class="navbar__box__text text-color fontf__oswald fw-bolder">
                             <p class="text-color">Call us now</p>
-                            <a class="fs-6" href="tel:+01022674132">01022674132</a>
+                            <a class="fs-6" href="tel:0504333360">0504333360</a>
                         </div>
                     </div>
                     <div class="navbar__box">
                         <i class="fa-solid fa-envelope-open-text fs-3 me-2 text-danger"></i>
                         <div class="navbar__box__text text-color fontf__oswald fw-bolder">
                             <p>Email now</p>
-                            <a class="fs-6" href="mailto:abdelrazekemad123@gmail.com">abdelrazekemad123@gmail.com</a>
+                            <a class="fs-6" href="mailto:masar@masaratalmina.com">masar@masaratalmina.com</a>
                         </div>
                     </div>
                     <div class="navbar__box">
@@ -131,11 +131,11 @@
         <div class="mobile-nav__info">
             <span>
                 <i class="fa-solid fa-phone-volume fs-3 me-2 text-danger"></i>
-                <a href="tel:01022674132">01022674132</a>
+                <a href="tel:0504333360">0504333360</a>
             </span>
             <span>
                 <i class="fa-solid fa-envelope-open-text fs-3 me-2 text-danger"></i>
-                <a href="mailto:abdelrazekemad123@gmail.com">abdelrazekemad123@gmail.com</a>
+                <a href="mailto:masar@masaratalmina.com">masar@masaratalmina.com</a>
             </span>
             <span>
                 <i class="fa-solid fa-location-dot fs-3 me-2 text-danger"></i>
@@ -239,10 +239,10 @@
                 <div class="col">
                     <h2>Links:</h2>
                     <ul>
-                        <li><a class="text-color" href="./index.html">Home</a></li>
-                        <li><a class="text-color" href="./index.html">About us</a></li>
-                        <li><a class="text-color" href="./index.html">Contact us</a></li>
-                        <li><a class="text-color" href="./index.html">Services</a></li>
+                        <li><a class="text-color" href="../../index.html">Home</a></li>
+                        <li><a class="text-color" href="../../about-us/about.html">About us</a></li>
+                        <li><a class="text-color" href="../../contact/contact.html">Contact us</a></li>
+                        <li><a class="text-color" href="../../services/services.html">Services</a></li>
                     </ul>
                 </div>
                 <div class="col-6">
@@ -256,7 +256,7 @@
                                 Street: Salah Al-Din Al-Ayyubi Road</p>
                         </li>
                         <li>Email:
-                            <p class="text-color">abdelrazekemad123@gmail.com</p>
+                            <p class="text-color">masar@masaratalmina.com</p>
                         </li>
                     </ul>
                 </div>
