--- a/index-ar.html
+++ b/index-ar.html
@@ -311,7 +311,7 @@
     <!-- Start testimonials -->
     <section class="testimonials py-5">
         <div class="container d-flex justify-content-center align-items-center flex-column">
-            <span class="text_red_color fw-bold">الإراء</span>
+            <span class="text_red_color fw-bold">الأراء</span>
             <h2 class="text_main_color fs-1 mb-4">أراء عملائنا</h2>
             <div class="owl-carousel-testimonials owl-carousel owl-theme">
                 <div class="item">
